--- a/pages/project.html
+++ b/pages/project.html
@@ -18,5 +18,20 @@
             </div>
         </div>
     </div>
+    <div class="navigation">
+        <div class="center">
+            <div class="logo">
+                <h2>LOGO</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#news">News</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                  </ul>
+            </div>
+        </div>
+    </div>
 </body>`
 </html>
